# streamlit-demo

./: README.md  app.py  cli.py  config.py  pyproject.toml
pages/: about.py  feedback.py  search_demo.py
