[project]
name = "clipabit-streamlit"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "streamlit>=1.51.0",
    "python-multipart",
    "watchdog",
]

[project.scripts]
dev = "cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli.py"]


